fixed overflow

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -7,7 +8,7 @@ body {
   margin: 0;
   color: white;
   height: 100%;
-  width: 100vw;
+  width: 100%;
   background-color: black;
 }
 
@@ -109,7 +110,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  width: 720px;
+  width: 370px;
   position: relative;
 }
 
@@ -145,7 +146,7 @@ hr {
 .tab > a {
   display: flex;
   flex-direction: column;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 600;
   position: absolute;
   margin-top: 10px;
